# social-media-analytics

./: CombinedReviewsAndProductMapping.xlsx  ExtractedReviews.xlsx  Product Mapping.xlsx  ProductMapping.xlsx  README.md  combine.ipynb  main.py  pyproject.toml  ~$Product Mapping.xlsx
