[tool.poetry]
name = "social-media-analytics"
version = "0.1.0"
description = ""
authors = ["Miyuki"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
